--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,18 @@
-numpy
-pandas
-scipy
-matplotlib
+numpy~=2.0.2
+pandas~=2.2.3
+scipy~=1.15.0
+matplotlib~=3.10.0
 pycuda
-tensorflow
-pyyaml
-statsmodels
+tensorflow~=2.18.0
+pyyaml~=6.0.2
+statsmodels~=0.14.4
+pip~=23.2.1
+wheel~=0.45.1
+protobuf~=5.29.3
+pillow~=11.1.0
+docutils~=0.21.2
+Sphinx~=8.1.3
+utils~=1.0.2
+keras~=3.8.0
+scikit-learn~=1.6.1
+AllanTools~=2024.6
