--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ numpy~=2.0.2
 pandas~=2.2.3
 scipy~=1.15.0
 matplotlib~=3.10.0
-pycuda
+pycuda~=2024.1.2
 tensorflow~=2.18.0
 pyyaml~=6.0.2
 statsmodels~=0.14.4
